force-app/src/objects/CIS_Contact_Application__c.object
<CustomObject>
    <fields>
        <fullName>Anser_complaint_or_investigation__c</fullName>
        <formula>Contact__r.Anser_complaint_or_investigation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If yes, provide an explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_certificate_or_license_denied__c</fullName>
        <formula>Contact__r.Answer_certificate_or_license_denied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If yes, provide an explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_convicted_or_cautioned__c</fullName>
        <formula>Contact__r.Answer_convicted_or_cautioned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If yes, provide an explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birtdate__c</fullName>
        <formula>Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIS_Application_Status__c</fullName>
        <formula>TEXT( Contact__r.CIS_Application_Status__c )</formula>
        <label>CIS Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_Workshops_Attended__c</fullName>
        <formula>Contact__r.CIS_RCIS_workshops_attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS Workshops Attended</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_or_license_denied__c</fullName>
        <formula>TEXT(Contact__r.Certificate_or_license_denied__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Have you ever had any professional certificate or license denied, revoked or suspended?</inlineHelpText>
        <label>Certificate or license denied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_made_or_subject_investigation__c</fullName>
        <formula>TEXT(Contact__r.Complaint_made_or_subject_investigation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Have you ever had a complaint made against you or been subject to an investigation that is relevant to your professional competence, standing or conduct?</inlineHelpText>
        <label>Complaint made or subject investigation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CIS_Contact_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Convicted_or_cautioned__c</fullName>
        <formula>TEXT(Contact__r.Complaint_made_or_subject_investigation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Have you ever been convicted or cautioned in relation to any criminal offense?</inlineHelpText>
        <label>Convicted or cautioned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courses_Taken_in_last_12_months__c</fullName>
        <formula>Contact__r.CIS_RCourses_Undertaken_last_12_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Courses Taken in last 12 months</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_School_CIS_Members__c</fullName>
        <formula>Contact__r.CIS_Member_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current School (CIS Members)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_School_Non_CIS_Members__c</fullName>
        <formula>Contact__r.Current_non_CIS_school__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current School (Non-CIS Members)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Availability__c</fullName>
        <formula>Contact__r.CIS_RDate_of_Availability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Passport__c</fullName>
        <formula>Contact__r.CIS_REU_Passport__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Passport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographical_Preferences__c</fullName>
        <inlineHelpText>Use Ctrl key or cmd on Mac to select more than one preference.</inlineHelpText>
        <label>Geographical Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australasia</fullName>
                </value>
                <value>
                    <fullName>Central American &amp; Caribbean</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>Indian Subcontinent &amp; Asia</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North &amp; Central Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Northern Europe</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>South East Asia</fullName>
                </value>
                <value>
                    <fullName>Southern &amp; Western Africa</fullName>
                </value>
                <value>
                    <fullName>Southern Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IB_Workshops_Attended__c</fullName>
        <formula>Contact__r.CIS_RIB_workshops_attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List any IB workshops you have attended.</inlineHelpText>
        <label>IB Workshops Attended</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Partner_registered_with_C_R_Services__c</fullName>
        <formula>TEXT(Contact__r.Is_Partner_registered_with_C_R__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is your partner registered with CIS Career &amp; Recruitment Services?</inlineHelpText>
        <label>Partner Registered With C&amp;R Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Contact__r.Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <inlineHelpText>Select additional languages (working proficiency).To select multiple, PC users hold Ctrl (Mac users hold command) and click additional languages.</inlineHelpText>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <formula>Contact__r.CIS_RLinkedIn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <formula>TEXT( Contact__r.Standing__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marital Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Tongue__c</fullName>
        <label>Mother Tongue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Awadhi</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Balochi</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bhojpuri</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chewa</fullName>
                </value>
                <value>
                    <fullName>Chhattisgarhi</fullName>
                </value>
                <value>
                    <fullName>Chittagonian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Deccan</fullName>
                </value>
                <value>
                    <fullName>Dhundhari</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Eastern Min</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Fula</fullName>
                </value>
                <value>
                    <fullName>Gan Chinese</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                </value>
                <value>
                    <fullName>Haitian Creole</fullName>
                </value>
                <value>
                    <fullName>Hakka</fullName>
                </value>
                <value>
                    <fullName>Haryanvi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_accompanying_school_age_children__c</fullName>
        <formula>TEXT( Contact__r.No_of_accompanying_school_age_children__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of accompanying school-age children</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <formula>TEXT(Contact__r.TR1__Notice_Period__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notice Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_s_First_Name__c</fullName>
        <formula>Contact__r.CIS_RPartner_s_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner&apos;s First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_s_Primary_Nationality__c</fullName>
        <formula>TEXT( Contact__r.CIS_RPartner_s_Nationality_Citizenship__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner&apos;s Primary Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_s_Profession__c</fullName>
        <formula>Contact__r.CIS_RPartner_s_Profession__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner&apos;s Profession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_s_Secondary_Nationality__c</fullName>
        <formula>TEXT( Contact__r.CIS_RPartner_s_Second_Nationality__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner&apos;s Secondary Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_s_Surname__c</fullName>
        <formula>Contact__r.CIS_RPartner_s_Surname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner&apos;s Surname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_seeking_Educator_Leadership_role__c</fullName>
        <formula>TEXT( Contact__r.Partner_seeking_Educator_Leadership_role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner seeking Educator/Leadership role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <formula>Contact__r.npe01__HomeEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Personal email address (not affiliated with an institution). Providing this email will allow you to maintain access to your CIS Account if you move to a new institution.</inlineHelpText>
        <label>Personal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Website_YouTube_Account__c</fullName>
        <formula>Contact__r.CIS_RPersonal_Website_YouTube_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link(s) to Personal Website and Videos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Country_Code__c</fullName>
        <formula>TEXT(Contact__r.Phone_country_code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <formula>TEXT(Contact__r.npe01__Preferred_Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <formula>TEXT(Contact__r.npe01__PreferredPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Nationality__c</fullName>
        <formula>TEXT(Contact__r.CIS_RPrimary_Nationality__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Nationality__c</fullName>
        <formula>TEXT(Contact__r.CIS_RSecondary_Nationality__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <formula>Contact__r.Skype__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectOld__c</fullName>
        <label>Subjecttemp</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubjectTemp__c</fullName>
        <formula>TEXT(Contact__r.TR1__Primary_Background__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject_</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_AreaOld__c</fullName>
        <label>Subject AreaOld</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subject_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_AreaTemp__c</fullName>
        <formula>TEXT(Contact__r.TR1__Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject Area_</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Area__c</fullName>
        <label>Subject Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <formula>Contact__r.npe01__WorkEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <formula>Contact__r.npe01__WorkPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <formula>Contact__r.Years_of_Experience__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years of Experience</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_International_Experience__c</fullName>
        <formula>Contact__r.Years_of_International_Experience__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years of International Experience</label>
        <type>Text</type>
    </fields>
    <label>CIS-Approved Candidates</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject_Area__c</columns>
        <columns>Date_of_Availability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CIS_Application_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIS-Approved Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>